# pepper_for_qiita

./: index.html  params.json  test.txt  test2.html
pepper_block/: gulpfile.js  index.html  index_test.html
pepper_block/choregraphe/pepper_block_app/: manifest.xml  pepper_block_app.pml
pepper_block/css/: styles.css  stylesTest.css
pepper_block/js/: blockdef_basicBlk.js  blockdef_basicDebugBlk.js  blockdef_caffeBlk.js  main.js  main_test.js
pepper_block/libs/: jquery.ui.dobletap.js
pepper_block/release/: index.html
pepper_block/share_test/: first_test.json
pepper_deep_cat/: index.html  server_test01.py
pepper_deep_cat/js/: main.js
pepper_hmd/: copyToUnityProj.bat
pepper_hmd/UnitySocketIO-master/: SocketIO.sln
pepper_hmd/UnitySocketIO-master/SocketIO/: SocketIO.csproj
pepper_hmd/hmd_app/: hmd_app.sln
pepper_hmd/hmd_app/hmd_app/: Form1.Designer.cs  (+5 more)
pepper_remocon/: index.html
pepper_remocon/css/: styles.css
pepper_remocon/js/: main.js
pepper_shounin/: index.html  package.json  project.json  shounin_proj.js
pepper_shounin/choregraphe/: copy_html.bat
pepper_shounin/js/: KiiShouninCore.js  NaoQiCore.js  block_core.js  cocos_resource.js  command_block_core.js  main.js  main_test.js  pepper_model.js
pepper_shounin/libs/: html5-cloud-sdk-v2.2.2.js
pepper_shounin/threejs_test/: webgl_loader_collada.html
pepper_shounin/threejs_test/PepperResource/pepper_meshes/: package.xml
pepper_shounin/threejs_test/PepperResource/pepper_meshes/meshes/1.0/Materials/: juliette_eyes.mat
pepper_workflow/: index.html
pepper_workflow/js/: main.js
(+57 files in other folders)
