<package>
  <name>pepper_meshes</name>
  <version>0.2.0</version>
  <description>meshes for the Aldebaran Robotics Pepper</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License</license>

  <url>http://github.com/ros-naoqi/pepper_meshes/</url>

  <build_depend>java</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
